--- a/.hintrc
+++ b/.hintrc
@@ -7,6 +7,7 @@
     "axe/text-alternatives": "off",
     "axe/parsing": "off",
     "meta-viewport": "off",
-    "meta-charset-utf-8": "off"
+    "meta-charset-utf-8": "off",
+    "axe/forms": "off"
   }
 }
