--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "2.2-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22"
   }
 }
