changed html files to ejs files. Created a backup folder to store html code that has now been cahnged to ejs

--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,7 @@
     "axe/parsing": "off",
     "meta-viewport": "off",
     "meta-charset-utf-8": "off",
-    "axe/forms": "off"
+    "axe/forms": "off",
+    "no-inline-styles": "off"
   }
 }
