--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,9 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "^3.3.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
